# Restaurant-Name-Generator-LLM-App

./: README.md  main.py  pyproject.toml  requirements.txt  restaurant.ipynb
.github/workflows/: main.yml
